feat: add find all submissions on each module
