# domain/submission/entity/module.go
@@ -1,6 +1,19 @@
 package entity
 
 type Module struct {
+	ID      string
+	Slug    string
+	Title   string
+	Grade   *Grade
+	Subject *Subject
+}
+
+type Grade struct {
 	ID   string
-	Slug string
+	Name string
+}
+
+type Subject struct {
+	ID   string
+	Name string
 }
